[tool.poetry]
name          = "smol_k8s_lab"
version       = "2.2.4"
description   = "CLI and TUI to quickly install slimmer Kubernetes distros and then manage apps declaratively using Argo CD"
authors       = ["Jesse Hitch <jessebot@linux.com>",
                 "Max Roby <emax@cloudydev.net>"]
readme        = "README.md"
packages      = [{include = "smol_k8s_lab"}]
license       = "AGPL-3.0-or-later"
homepage      = "https://small-hack.github.io/smol-k8s-lab"
repository    = "http://github.com/small-hack/smol-k8s-lab"
documentation = "https://small-hack.github.io/smol-k8s-lab"
keywords      = ["kubernetes", "homelab", "kind", "k3s", "k8s"]
classifiers   = ["Development Status :: 4 - Beta",
                 "Programming Language :: Python :: 3.11",
                 "Programming Language :: Python :: 3.12",
                 "Operating System :: MacOS :: MacOS X",
                 "Operating System :: POSIX :: Linux",
                 "Intended Audience :: End Users/Desktop",
                 "Topic :: System :: Installation/Setup",
                 "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
include       = ["smol_k8s_lab/config/kind/kind_cluster_config.yaml",
                 "smol_k8s_lab/config/default_config.yaml"]

[tool.poetry.urls]
"Bug Tracker" = "http://github.com/small-hack/smol-k8s-lab/issues"

[tool.poetry.dependencies]
bcrypt             = "^4.0"
click              = "^8.1"
cryptography       = "^42.0"
kubernetes         = "^29"
minio              = "^7.2"
pyfiglet           = "^1.0"
pyjwt              = "^2.8"
python             = ">=3.11,<4.0"
pyyaml             = "^6.0"
requests           = "^2.28"
rich               = "^13.0"
ruamel-yaml        = "^0.18"
ruamel-yaml-string = "^0.1"
textual            = "^0.52"
xdg-base-dirs      = "^6.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocs-video = "^1.5"

[tool.poetry.group.dev.dependencies]
deptry = "^0.12"
textual-dev = "^1.1"
pytest-textual-snapshot = "^0.4"

[tool.poetry.plugins."smol-k8s-lab.application.plugin"]
"smol-k8s-lab" = "smol_k8s_lab:main"

[tool.poetry.scripts]
smol-k8s-lab = "smol_k8s_lab:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
